--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   text-align: center;
-  min-height: calc(100vh - 112px);
+  height: calc(100vh - 112px);
 }
 
 .menu {
@@ -26,6 +26,8 @@
   border: 1px solid;
   border-radius: 10px;
   padding: 30px 20px;
+  overflow-y: auto;
+  scrollbar-width: thin;
 }
 
 .avatarContainer {
