--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,6 +95,7 @@ body {
     rgb(var(--background-start-rgb)); */
   font-size: 14px;
   color: #666;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
